-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0 Beta, 5.7
-
None
-
Linux x64
In the Location/Examples/mapviewer example, by clicking on tools->minimap segmentation fault is generated.
On 5.6, an error message on the console is printed instead
(qrc:///mapviewer.qml:143: Error: Qt.createQmlObject(): failed to create object:
qrc:///inline:1:15: Type MiniMap unavailable
qrc:///map/MiniMap.qml:65:9: Cannot assign to non-existent property "copyrightsVisible")
The problem seems to lead to qquickanimation.cpp line 139 and thereon
Update:
5.6 behaves the same if the "copyrightsVisible" property is removed from the minimap element