Fix for mapviewer example minimap crash

The mapviewer example crashes when the minimap
is set to be shown.
The problem is a null pointer dereferencing in
qquickgeomapgesturearea.cpp

Task-number: QTBUG-50519
Change-Id: I133585e4276a861951aec185c1ce120e76638c5d
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>